# naos

./: .clang-format  .gitignore  .gitmodules  GNUmakefile  LICENSE  README.md  build_mlibc_aarch64.sh  build_mlibc_x86_64.sh  flake.nix  format.sh  grub.cfg  init  limine.conf  limine_mixed.conf  limine_monolithic.conf  limine_multiboot2_mixed.conf  limine_multiboot2_monolithic.conf  limine_x86_64_mixed.conf  limine_x86_64_monolithic.conf  make_grub_image.sh  mkinitcpio.sh
kernel/: .gitignore  Cargo.toml  GNUmakefile  build.rs  get-deps  kallsyms.c  linker-aarch64-limine.ld  linker-aarch64.ld  linker-loongarch64-laboot.ld  linker-loongarch64-limine.ld  linker-loongarch64.ld  linker-riscv64-limine.ld  linker-riscv64-opensbi.ld  linker-riscv64-sbi.ld  linker-riscv64.ld  linker-x86_64-limine.ld  linker-x86_64-multiboot2.ld  linker-x86_64.ld
kernel/drivers/: GNUmakefile
kernel/drivers/ahci/: GNUmakefile  ahci.c  atapi.c
kernel/drivers/ext/: GNUmakefile  ext.c
kernel/drivers/nvme/: GNUmakefile  driver.c  nvme.c
kernel/drivers/usb/: GNUmakefile  hid.c  hid.h  msc.c  usb.c  usb.h  xhci-hcd.c  xhci-hcd.h
kernel/drivers/virtio/: GNUmakefile  blk.c  blk.h  net.c  net.h  pci.c  pci.h  queue.c  queue.h  virtio.c  virtio.h
kernel/drivers/xhci_hcd/: GNUmakefile  xhci_hcd.c  xhci_hcd.h
kernel/modules/: GNUmakefile
kernel/modules/ahci/: GNUmakefile  ahci.c  ahci.h  scsi.h
kernel/modules/e1000/: GNUmakefile  e1000.c  e1000.h
kernel/modules/ext/: GNUmakefile  ext.c  ext.h
kernel/modules/netserver/: GNUmakefile  netserver.c  socket.c  socketv6.c
kernel/modules/nvme/: GNUmakefile  driver.c
kernel/modules/usb/: GNUmakefile  hid.c  msc.c  msc.h  usb.c  usb.h  xhci-hcd.c  xhci-hcd.h
kernel/modules/virtio/: GNUmakefile  net.h  pci.c  virtio.c
kernel/modules/vmware_svga/: vmware.c
kernel/scripts/: convert_ecc_pubkey.sh  gen-kallsyms.awk  gen_module_signing_keys.sh  sign_module.py
kernel/src/: lib.rs  main.c  settings.h
kernel/src/acpi/: acpi.c  default_handlers.c  event.c  interpreter.c  io.c  kernel_api.c  mutex.c  namespace.c  notify.c  opcodes.c  opregion.c  osi.c  registers.c  resources.c  shareable.c  sleep.c  stdlib.c  tables.c  types.c  uacpi.c  utilities.c
kernel/src/arch/: arch.h  elf.h  mod.rs  signal.h  signal_impl.h  task_abi.h
kernel/src/block/: block.c  block.h  partition.c  partition.h
kernel/src/boot/: boot.h  efi.h  la_boot.c  limine_boot.c  multiboot2_boot.c  opensbi_boot.c  sbi_boot.c
kernel/src/bpf/: socket_filter.c  socket_filter.h
kernel/src/cgroup/: cgroup.c  cgroup.h
kernel/src/debug/: gdbstub.c  gdbstub.h
kernel/src/dev/: device.c  device.h
kernel/src/drivers/: clockevent.c  clockevent.h  deadline.c  deadline.h  fb.c  fb.h  fbserial.c  fbtty.c  input.c  input.h  kernel_logger.c  kernel_logger.h  logger.c  mod.rs  pty.c  pty.h  rtc.c  rtc.h  serial.c  serial.h  serialtty.c  smbios.c  smbios.h  tty.c  tty.h
kernel/src/fs/: configfs.c  configfs.h  dev.c  dev.h  fs_syscall.c  fs_syscall.h  initramfs.c  (+12 more)
(+1743 files in other folders)
