[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.10.2"
bitflags = "2.9.1"
good_memory_allocator = "0.1.7"
limine = "0.5.0"
pci_types = "0.10.0"
spin = "0.10.0"

[dependencies.crossbeam-queue]
version = "0.3.12"
features = ["alloc"]
default-features = false

[dependencies.nvme]
git = "https://github.com/plos-clan/nvme-rs"

[dependencies.os-terminal]
version = "0.6.10"
features = ["bitmap", "truetype"]
default-features = false

[dependencies.smoltcp]
version = "0.12.0"
features = ["log", "proto-ipv4", "proto-ipv6", "socket-dns", "socket-icmp", "socket-udp", "socket-dhcpv4", "socket-tcp", "socket-raw", "medium-ip", "medium-ethernet", "alloc"]
default-features = false

[dependencies.virtio-drivers]
path = "crates/virtio-drivers"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]

[build-dependencies]
bindgen = "0.72.0"

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = true
