[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.10.2"
bitflags = "2.9.1"
good_memory_allocator = "0.1.7"
linked_list_allocator = "0.10.5"
pci_types = "0.10.0"
spin = "0.10.0"

[dependencies.crossbeam-queue]
version = "0.3.12"
features = ["alloc"]
default-features = false

[dependencies.os-terminal]
version = "0.6.10"
features = ["bitmap", "truetype"]
default-features = false

[dependencies.virtio-drivers]
path = "crates/virtio-drivers"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.4.0"
x86_64 = "0.15.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]

[build-dependencies]
bindgen = "0.72.0"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = true
